--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "jquery": "3.3.1",
-    "bootstrap": "4.1.3",
+    "angular-file-uploader": "4.1.4",
     "angular-froala-wysiwyg": "2.9.1",
-    "angular-file-uploader": "4.1.4"
-        
+    "bootstrap": "4.1.3",
+    "jquery": "3.3.1",
+    "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.24",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.4",
